[project]
name = "Sudoku Solver"
version = "0.0.1"
authors = [ { name="David Saidman" } ]
description = "Using sudoku as a sample problem to learn the essential parts of some new languages and tools"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3"]
dependencies = [
    "filelock>=3.18.0",
    "humanfriendly>=10.0",
    "juliacall>=0.9.25",
    "juliapkg>=0.1.17",
    "logger>=1.4",
    "lupa>=2.4",
    "PyQt6>=6.9.0",
    "PyQt6-Qt6>=6.9.0",
    "PyQt6_sip>=13.10.0",
    "semver>=3.0.4"
    ]
keywords = ["sudoku","pyqt6","juliaCall","lupa"]


[project.urls]
Repository = "https://github.com/dsaidman/sudokuSolver.git"


[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
