
[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sudokuSolver"
version = "v0.0.1"
authors = [ { name="David Saidman" } ]
description = "Using sudoku as a sample problem to learn the essential parts of some new languages and tools"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3"]
dependencies = [
    "juliacall>=0.9.25",
    "logger>=1.4",
    "lupa>=2.4",
    "PyQt6>=6.9.0",
    ]
keywords = ["sudoku","pyqt6","juliaCall","lupa"]


[project.urls]
Repository = "https://github.com/dsaidman/sudokuSolver.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sudokuSolver.src.*"]

[project.scripts]
sudokuSolver = "sudokuSolver.src.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = false


[tool.autopep8]
in-place = true
recursive = true
aggressive = 3
